# zapzap-backend

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.tf  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 02721223f9bf_add_user_is_registered.py  196c961f27f2_frieda_upgrade_3.py  1baf28fdb38b_add_tweets_table.py  23be12d33701_add_user_is_registered_nullable_false.py  4dc644d3abcc_add_tweet_id_fk.py  4e29671dbbf5_add_users_tip_recipient_nullable_false.py  5c8c89d1a5f3_add_users_tip_sender.py  (+16 more)
backend/app/models/: db.py  sync_state.py  tip.py  tweet.py  user.py
backend/app/routes/: authentication.py  auths.py  leaderboard.py  sse.py  tips.py  user.py  users.py
backend/app/schemas/: auth.py  tip.py  user.py
backend/app/services/: bip353.py  lightning_service.py  tip_service.py  twitter_mention_monitor.py  twitter_service.py
backend/app/utils/: logging.py  security.py  sync_state.py  tweet_data_extract.py  twitter_oauth.py  validators.py
backend/database/: crud.py  database.py  models.py
backend/db-test/: Dockerfile  main.py  requirements.txt
backend/tests/: conftest.py  gif_file_download.py  test_create_invoice.py  test_leaderboard.py  tweet_reply_test.py  twitter_post.py  uploading_gif.py
infrastructure/: .terraform.lock.hcl  backend.tf  cloudrun.tf  database.tf  firebase.tf  main.tf  network.tf  storage.tf  terraform.tfstate  terraform.tfstate.backup  twitter.tf  variables.tf
