# [project]
# name = "zapzap"
# description = "ZapZap Backend"
# version = "0.1.0"
# authors = [{ name = "Your Name", email = "your.email@example.com" }]
# dependencies = ["fastapi", "sqlalchemy"]

# #[project.optional-dependencies]
# #dev = ["pre-commit", "ruff"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]

[tool.Ruff.lint.isort]
multi_line_output = 3
