[project]
name = "ZapZap"
version = "0.1.0"
description = "ZapZap Backend"
requires-python = ">= 3.12"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]

[tool.Ruff.lint.isort]
force-wrap-aliases = true
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [ "backend/app"]
testpaths = ["backend/tests"]